# brw

./: .env.example  .gitignore  Cargo.toml
crates/app/: Cargo.toml
crates/app/src/: config.rs  main.rs
crates/db/: Cargo.toml
crates/db/src/: agent_repo.rs  lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: agent.rs
crates/ports/: Cargo.toml
crates/ports/src/: agent_api.rs  lib.rs
crates/services/: Cargo.toml
crates/services/src/: agent_service.rs
crates/web/: Cargo.toml
crates/web/src/: error.rs  lib.rs  router.rs  state.rs
crates/web/src/middleware/: auth.rs
crates/web/src/routes/: agent_routes.rs  mod.rs
