[workspace]
resolver = "3"
members = [
    "crates/domain",
    "crates/ports",
    "crates/db",
    "crates/services",
    "crates/web",
    "crates/app",
]

[workspace.dependencies]
# Асинхронный рантайм
tokio = { version = "1", features = ["full"] }

# Сериализация
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Дата/время
chrono = { version = "0.4", features = ["serde"] }

# PostgreSQL
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
] }

# HTTP-фреймворк
axum = "0.8"

# Обработка ошибок
thiserror = "2"
anyhow = "1"

# Логирование
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Асинхронные трейты
async-trait = "0.1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }
