[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
web = { path = "../web" }
services = { path = "../services" }
db = { path = "../db" }
domain = { path = "../domain" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
